fix: use existing dark mode variable in bike-path-admin SCSS

--- a/src/styles/_bike-path-admin.scss
+++ b/src/styles/_bike-path-admin.scss
@@ -107,7 +107,7 @@
     font-size: 0.8125rem;
 
     @include dark-mode {
-      background: $color-tag-bg-dark;
+      background: $color-card-bg-dark;
     }
   }
 
